# CapsuleChord2Keypad

./: CMakeLists.txt  README.md  board.cpp  board.h  config.cpp  config.h  console.cpp  console.h  i2c_handler.cpp  i2c_handler.h  keycodes.h  keyset.cpp  keyset.h  main.cpp  memmap_picoboot3.ld
tools/: 1.json  README.md  config_tool.py  sample_config.json
utils/: CMakeLists.txt  queue.h  set.h
